--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ header{
    text-align: center;
 }
 main{
-    overflow-x: hidden;
+   /* overflow-x: hidden;*/
 }
 #cabecalho{
     text-align:center;
@@ -85,17 +85,18 @@ label{
 .redund{
     opacity:0;
 }
-input[type=radio]
+
+/*input[type=radio]
 {
   /* Double-sized Checkboxes */
-  -ms-transform: scale(1.5); /* IE */
-  -moz-transform: scale(1.5); /* FF */
-  -webkit-transform: scale(1.5); /* Safari and Chrome */
-  -o-transform: scale(1.5); /* Opera */
-  transform: scale(1.5);
-  padding: 10px;
-  margin: 5px;
-}
+/*  -ms-transform: scale(1.5); /* IE */
+ /* -moz-transform: scale(1.5); /* FF */
+ /* -webkit-transform: scale(1.5); /* Safari and Chrome */
+ /* -o-transform: scale(1.5); /* Opera */
+ /* transform: scale(1.5);
+ /* padding: 10px;
+ /* margin: 5px;*/
+/*}*/
 .cilindro{
     display:flex;
    
@@ -133,7 +134,12 @@ input[type=radio]
     width: 80%; 
     text-align: left;
     box-shadow: 0 0 1em black;
+    font-size: larger;
   }
+.modal-content input{
+    font-size: 1.2em;
+}
+
   .close {
     color: #aaa;
     float: right;
